--- a/Diagnosis.App/Properties/Resources.resx
+++ b/Diagnosis.App/Properties/Resources.resx
@@ -136,4 +136,7 @@
   <data name="_126_Edit_24x24_72" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\126_Edit_24x24_72.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Find_5650" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Find_5650.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
