ui. Add AvalonDock

--- a/Diagnosis.App/Properties/Resources.resx
+++ b/Diagnosis.App/Properties/Resources.resx
@@ -151,4 +151,7 @@
   <data name="Sorting_Ord" xml:space="preserve">
     <value>По порядку</value>
   </data>
+  <data name="avalon_layout" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\avalon-layout.config;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
