--- a/Diagnosis.App/Properties/Resources.resx
+++ b/Diagnosis.App/Properties/Resources.resx
@@ -166,4 +166,16 @@
   <data name="HealthRecordQueryAndScope_Patient" xml:space="preserve">
     <value>у пациента</value>
   </data>
+  <data name="Sorting_None" xml:space="preserve">
+    <value>(нет)</value>
+  </data>
+  <data name="Sorting_CreatedAt" xml:space="preserve">
+    <value>По дате создания</value>
+  </data>
+  <data name="GroupBy" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\images\groupby.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SortAscending" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\images\sortascending.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
