--- a/Diagnosis.Client.App/Properties/Resources.resx
+++ b/Diagnosis.Client.App/Properties/Resources.resx
@@ -137,7 +137,7 @@
     <value>..\Resources\Images\Find_5650.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Sorting_Category" xml:space="preserve">
-    <value>По категории</value>
+    <value>По разделу</value>
   </data>
   <data name="Sorting_Date" xml:space="preserve">
     <value>По дате</value>
@@ -174,5 +174,11 @@
   </data>
   <data name="DeleteHS" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Images\DeleteHS.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HrCategories" xml:space="preserve">
+    <value>Разделы</value>
+  </data>
+  <data name="HrCategory" xml:space="preserve">
+    <value>Раздел</value>
   </data>
 </root>
