--- a/Diagnosis.Client.App/Properties/Resources.resx
+++ b/Diagnosis.Client.App/Properties/Resources.resx
@@ -196,4 +196,7 @@
   <data name="CompletionMode" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Images\CompletionMode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ForbiddenTagToolTip" xml:space="preserve">
+    <value>Такого слова нет в словаре, игнорируется</value>
+  </data>
 </root>
